docs/tests/typing/bad/testfile-redef-5.cpp

int main() { int x; int x; }
